# Joulyzer

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_DESCRIPTION.md  README.md  SKILL.md  pyproject.toml
docs/: github-actions-tests.yml  verifiable-usage-records.md
examples/: agent_integration.py  sample_journal.csv
joulyzer/: __init__.py  __main__.py  agent.py  cli.py  metrics.py  parser.py  report.py
joulyzer/generators/: __init__.py  bitget_paper.py
scripts/: live_usage_harness.py  mcp_client_demo.py  verify_submission.sh
tests/: test_agent_and_generator.py  test_joulyzer.py
verifiable_usage_records/: cli_text_run.txt  integration_run_stdout.txt  live-bitget-server-time.txt  live-usage-2026-06-24T19-50-10Z.json  live-usage-2026-06-24T19-50-10Z.md  live-usage-2026-06-24T19-50-31Z.md  live-usage-2026-06-24T19-52-47Z.json  live-usage-2026-06-24T19-52-47Z.md  live-usage-2026-06-24T19-54-22Z.json  live-usage-2026-06-24T19-54-22Z.md  live-usage-2026-06-24T19-54-33Z.json  live-usage-2026-06-24T19-54-33Z.md  live-usage-latest.json  live_mcp_session.log.jsonl  live_usage.jsonl  live_usage_summary.json  live_usage_summary.md  mcp_manifest.json  pytest-2026-06-24.txt  sample-api-io.md  tool_schema.json
verifiable_usage_records/integration_run/: agent_session_journal.csv  agent_tool_call_result.json  bitget_api_call_log.jsonl
verifiable_usage_records/live_session/: live_journal.csv
verifiable_usage_records/live_usage_inputs/: generated_medium.csv  generated_small.csv
