[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joulyzer"
version = "0.2.0"
description = "AI Trade Journal Analyzer + agent-grade analytics tool for Bitget / Binance / Bybit CSV exports."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Joulyzer Contributors"}]
keywords = [
  "trading",
  "journal",
  "analytics",
  "bitget",
  "binance",
  "ai-agent",
  "mcp",
  "agent-tool",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
joulyzer = "joulyzer.cli:main"

[tool.setuptools.packages.find]
include = ["joulyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
